# single_turtle_workspace

./: deploy_dependencies.sh  enter_turtle.sh
dataanalysis/: GUI_plotter.py
dependencies/: build.sh
dependencies/traveler_controller/: CMakeLists.txt  package.xml
dependencies/traveler_controller/include/: main.h
dependencies/traveler_controller/include/can_driver/: can_driver.hpp  can_publisher.hpp  can_service.hpp  can_suber.hpp  odrive_can.hpp  socketcan_interface.hpp
dependencies/traveler_controller/include/controller/: basecontroller.h  controller_monitor.h  inverse_kinematics.h  pid_speed_controller.h
dependencies/traveler_controller/include/proxy/: control_data.h  lowerproxy.h  upperproxy.h
dependencies/traveler_controller/src/: main.cpp
dependencies/traveler_controller/src/can_driver/: can_driver.cpp  can_publisher.cpp  can_service.cpp  can_suber.cpp  odrive_can.cpp  socketcan_interface.cpp
dependencies/traveler_controller/src/controller/: Inverse_kinematics.cpp
dependencies/traveler_controller/src/proxy/: lowerproxy.cpp  upperproxy.cpp
dependencies/traveler_msgs/: CMakeLists.txt  package.xml
dependencies/traveler_msgs/msg/: OdriveStatus.msg  TravelerConfig.msg  TravelerMode.msg  TravelerStatus.msg
dependencies/traveler_msgs/odrivemsg/: SetInputPosition.msg  SetState.msg
highlevel/: depend.txt  main.py  rasp_main.py  readme.md
highlevel/LASSIE_GUI/: env_wrapper.py  gait_optimizer.py  lassie_gui.py  readme.md  ros2_interface_turtle.py  terrain_senser.py
highlevel/LASSIE_GUI/config/: last_config.csv
highlevel/config/: last_config.csv
highlevel/resource/: style.kv
highlevel/traveler_optitrack/: setup.cfg  setup.py
highlevel/traveler_optitrack/install/: local_setup.sh  setup.sh
highlevel/traveler_optitrack/install/traveler_optitrack/lib/traveler_optitrack/: traveler_optitrack
highlevel/traveler_optitrack/install/traveler_optitrack/share/traveler_optitrack/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
highlevel/traveler_optitrack/traveler_optitrack/: traveler_optitrack.py
